--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/hapi__joi": "^17.1.15",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^30.0.2",
@@ -55,6 +56,7 @@
     "jest-util": "^30.0.2",
     "nx": "21.4.1",
     "prettier": "^2.6.2",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
